syntax = "proto3";

package proto;

message Device {
  string device_type = 1;
  string device_path = 2;
  string vendor_id = 3;
  string product_id = 4;
}

message DeviceList {
  repeated Device devices = 1;
}

message GetDevicesRequest {}

message Error {
  string message = 1;
}

service DeviceService {
  rpc GetDevices (GetDevicesRequest) returns (DeviceList);
}